--- a/app.json
+++ b/app.json
@@ -4,6 +4,9 @@
       "eas": {
         "projectId": "6867cd4e-e62d-4102-a50e-73cd7bebf71b"
       }
+    },
+    "android": {
+      "package": "com.curryme.kk4hellodunia"
     }
   }
 }
